--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=https://emptekom-my.sharepoint.com/personal/tatiana_novikova_empirica_com/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Ftatiana%5Fnovikova%5Fempirica%5Fcom%2FDocuments%2FPublic%2F240522%20tunES%20%2D%20Slide%20Deck%20Tuning%20EPC%20and%20SRI%5Fsm%2Epdf&parent=%2Fpersonal%2Ftatiana%5Fnovikova%5Fempirica%5Fcom%2FDocuments%2FPublic&ga=1>
+    <meta http-equiv="refresh" content="0; url=https://emptekom-my.sharepoint.com/personal/tatiana_novikova_empirica_com/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Ftatiana%5Fnovikova%5Fempirica%5Fcom%2FDocuments%2FPublic%2F240522%20tunES%20%2D%20Slide%20Deck%20Tuning%20EPC%20and%20SRI%5Fsm%2Epdf&parent=%2Fpersonal%2Ftatiana%5Fnovikova%5Fempirica%5Fcom%2FDocuments%2FPublic&ga=1" />
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="NEW_ONEDRIVE_LINK_HERE">link</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="https://emptekom-my.sharepoint.com/personal/tatiana_novikova_empirica_com/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Ftatiana%5Fnovikova%5Fempirica%5Fcom%2FDocuments%2FPublic%2F240522%20tunES%20%2D%20Slide%20Deck%20Tuning%20EPC%20and%20SRI%5Fsm%2Epdf&parent=%2Fpersonal%2Ftatiana%5Fnovikova%5Fempirica%5Fcom%2FDocuments%2FPublic&ga=1">link</a>.</p>
 </body>
 </html>
